--- a/blog/src/main/resources/application.properties
+++ b/blog/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 
+server.port=8081
 spring.datasource.url=jdbc:mysql://localhost:3306/blog_app_api
 spring.datasource.username=root
 spring.datasource.password=root
